--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   flutter_easyloading: ^3.0.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
