--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   http: ^0.13.4
   flutter_easyloading: ^3.0.3
   intl: ^0.17.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
