complaints part done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   intl: ^0.17.0
   fluttertoast: ^8.0.9
   reviews_slider: ^2.0.0
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
