admin page started

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   fluttertoast: ^8.0.9
   reviews_slider: ^2.0.0
   shared_preferences: ^2.0.13
+  carousel_slider: ^4.1.1
+  dropdown_button2: ^1.4.0
 
 dev_dependencies:
   flutter_test:
