--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.0.13
   carousel_slider: ^4.1.1
   dropdown_button2: ^1.4.0
+  pie_chart:
 
 dev_dependencies:
   flutter_test:
